# gc-qa-rag

./: README.md
src/gc-qa-rag-etl/: .config.development.json  .env  .gitignore  pyproject.toml  readme.md
src/gc-qa-rag-etl/etlapp/: das_index.py  etl_index.py  ved_index.py  vedgraph_index.py
src/gc-qa-rag-etl/etlapp/common/: chunk.py  config.py  context.py  embedding.py  embedding_qa.py  file.py  format.py  hash.py  llm.py  log.py  vector.py
src/gc-qa-rag-etl/etlapp/das/: das_doc.py  das_forum.py  das_generic.py
src/gc-qa-rag-etl/etlapp/etl/: flow.py
src/gc-qa-rag-etl/etlapp/etl/etl_doc/: embedding.py  generate.py  generate_full.py  generate_sub.py  merge.py
src/gc-qa-rag-etl/etlapp/etl/etl_forum_qa/: embedding.py  generate.py
src/gc-qa-rag-etl/etlapp/etl/etl_forum_tutorial/: embedding.py  generate.py
src/gc-qa-rag-etl/etlapp/etl/etl_generic/: embedding.py  generate.py  generate_full.py  generate_sub.py  merge.py
src/gc-qa-rag-etl/etlapp/ved/: initialize_doc.py  initialize_forum_qa.py  initialize_forum_tutorial.py  initialize_generic.py  update_aliases.py
src/gc-qa-rag-etl/etlapp/ved_graph/: node_generate.py  node_graph.py  node_search.py
src/gc-qa-rag-server/: .config.development.json  .config.production.json  .gitignore  Dockerfile  pyproject.toml  readme.md
src/gc-qa-rag-server/deploy/: docker-compose.yml
src/gc-qa-rag-server/ragapp/: server.py
src/gc-qa-rag-server/ragapp/common/: config.py  db.py  embedding.py  limiter.py  llm.py  log.py
src/gc-qa-rag-server/ragapp/services/: query.py  research.py  search.py  summary.py  think.py
(+34 files in other folders)
