[project]
name = "gc-qa-rag-etl"
version = "0.1.0"
description = "gc-qa-rag ETL app"
authors = [{ name = "experdotxie", email = "experdot.xie@developertools.com" }]
dependencies = [
    "python-dotenv>=1.1.0",
    "dashscope>=1.23.1",
    "openai>=1.75.0",
    "qdrant-client>=1.13.3",
    "lxml>=5.3.2",
    "beautifulsoup4>=4.13.4",
    "platformdirs>=4.3.7",
    "markitdown[all]>=0.1.1",
]
requires-python = "==3.13.*"
readme = "README.md"
license = { text = "MIT" }


[tool.pdm]
distribution = false

[tool.pdm.scripts]
das = "python -m etlapp.das_index"
etl = "python -m etlapp.etl_index"
ved = "python -m etlapp.ved_index"
